--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Розклад занять ЛНУ імені Івана Франка",
   "short_name": "Розклад занять",
-  "description": "",
+  "description": "Застосунок, який дозволяє з легкістю переглядати твій розклад занять.",
 
   "background_color": "#141B4D",
   "display": "standalone",
