--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,26 @@
 {
-  "name": "Розклад занять ЛНУ імені Івана Франка",
+  "name": "UniSched - розклад занять у смартфоні",
   "short_name": "Розклад занять",
-  "description": "Застосунок, який дозволяє з легкістю переглядати твій розклад занять.",
+  "description": "Застосунок, який дозволяє з легкістю переглядати твій розклад занять, навіть без доступу до мережі Інтернет.",
 
+  "theme_color": "#141B4D",
   "background_color": "#141B4D",
   "display": "standalone",
 
   "scope": "/",
   "start_url": "/",
-  
+
   "icons": [
-    { "src": "/img/favicon.ico", "type": "image/x-icon", "sizes": "16x16 32x32" },
+    { "src": "/img/favicon.ico", "type": "image/x-icon", "sizes": "32x32" },
     { "src": "/img/icon-192.png", "type": "image/png", "sizes": "192x192" },
     { "src": "/img/icon-512.png", "type": "image/png", "sizes": "512x512" },
     { "src": "/img/icon-192-maskable.png", "type": "image/png", "sizes": "192x192", "purpose": "maskable" },
     { "src": "/img/icon-512-maskable.png", "type": "image/png", "sizes": "512x512", "purpose": "maskable" }
+  ],
+
+  "screenshots": [
+    { "src": "/screenshots/screen_1.jpg", "sizes": "1080x2314", "type": "image/jpeg" },
+    { "src": "/screenshots/screen_2.jpg", "sizes": "1080x2314", "type": "image/jpeg" },
+    { "src": "/screenshots/screen_3.jpg", "sizes": "1080x2314", "type": "image/jpeg" }
   ]
 }
